# jlmlcasestudies

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  netlify.toml  package-lock.json  package.json  playwright.config.js  pyproject.toml  tailwind.config.js  vite.config.js
.github/workflows/: deepseek_logprobs.yml  run_modal_on_comment.yml  run_modal_script.yml  run_modal_train_infinitedata_jax.yml  train_infinitedata_jax.yml
case1/data/: hgb_test_yhat.npy  mlp_test_yhat.npy
case1/frontend/: Case1.jsx  Case1Solutions.jsx
case1/scripts/: generate_data.py  train_hgb.py  train_mlp.py
case2/data/: baseline_samples.npy  infinitedata_energy_score.csv  infinitedata_samples.npy  infinitedata_scatter_samples.csv  infinitedata_training_history.json  infinitedata_training_loss.csv  optimal_samples.npy  rectified_flow_samples.npy  reference_energy_score.csv  reference_samples.npy  reference_scatter_samples.csv  reference_training_history.json  reference_training_history.npy  reference_training_loss.csv
case2/frontend/: Case2.jsx  Case2Solutions.jsx
case2/scripts/: generate_baseline.py  generate_groundtruth.py  generate_infinitedata.py  generate_optimal.py  generate_reference.py  modal_train_infinitedata_jax.py  modal_train_reference_jax.py  model.py  train_infinitedata_jax_modal.py
case3/data/: reference_training_loss.csv  (+4 more)
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: copy-data.js  modal_extract_beyondrgb.py  modal_generate_case5_data.py  modal_setup_volume.py
src/: App.jsx  index.css
tests/: case2.spec.js
(+46 files in other folders)
